# gatway

./: .rde_sync_test.txt  CONTRACT_FIRST_MIGRATION.md  Dockerfile  MIGRATION.md  PROXY_IMPLEMENTATION.md  README.md  UPSTREAM_EXPECTATIONS.md  canary_config.json.example  pyproject.toml  pytest.ini  requirements.txt  run_dev.sh
artifacts/: flask_routes.normalized.json
legacy/scripts/: EXAMPLE_ROUTER.py  README.md  export_routes.py  generate_fastapi_routers.py  wire_routers.py
src/gateway/: main.py
src/gateway/context/: oauth_context.py  request_context.py
src/gateway/db/: session.py
src/gateway/domain/: leads_service.py
src/gateway/errors/: error_codes.py  exceptions.py  handlers.py  types.py
src/gateway/middleware/: request_context_headers.py
src/gateway/middleware/db/: db_session.py
src/gateway/oauth2/: router.py  token_router.py  token_verifier.py
src/gateway/partners/: enforce.py  file_provider.py  openapi.py  policies.py  policy.py  router.py
src/gateway/profiles/: base.py  legacy.py  registry.py  standard.py
src/gateway/proxy/: __init__.py  canary.py  client.py  endpoint.py  handler.py  router.py
src/gateway/routers/: debug.py  example_proxy.py  leads.py
src/gateway/routers/legacy/: __init__.py  _string_original_platform_.py  _string_platform_.py  api.py  fetch_credit_report.py  fetch_ssn.py  fetch_ssn_masked.py  fuse.py  galileo.py  heartbeat.py  hooks.py  mailhouse_round_delivered_notification.py  oauth2.py  opt_out.py  (+6 more)
src/gateway/test/: test_leads_endpoint.py  test_leads_endpoint_auth_flow.py  test_legacy_routes.py  test_proxy.py
