[project]
name = "gateway"
version = "0.1.0"
description = "OAuth2 Gateway API using FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    
    # Auth / OAuth
    "authlib>=1.3,<2.0",
    
    # Database
    "sqlalchemy>=2.0,<3.0",
    
    # Templates & Sessions
    "jinja2>=3.1.0",
    "itsdangerous>=2.0",
    
    # Utils
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# Uncomment when fundbox packages are available on pypi.fbx.im
# fundbox = [
#     "fundbox-common>=1.0.0",
#     "fundbox-sdk>=1.0.0",
# ]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.fbx.im/simple"
